src/routes/layout.css
@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap')
layer(base);

@import 'tailwindcss';
@plugin '@tailwindcss/forms';
@plugin '@tailwindcss/typography';

@custom-variant dark (&:is(.dark *));

@theme {
	--font-outfit: Outfit, sans-serif;

	--color-black: #101828;

	--breakpoint-2xsm: 375px;
	--breakpoint-xsm: 425px;
	--breakpoint-3xl: 2000px;

	--text-title-2xl: 72px;
	--text-title-2xl--line-height: 90px;
	--text-title-xl: 60px;
	--text-title-xl--line-height: 72px;
	--text-title-lg: 48px;
	--text-title-lg--line-height: 60px;
	--text-title-md: 36px;
	--text-title-md--line-height: 44px;
	--text-title-sm: 30px;
	--text-title-sm--line-height: 38px;
	--text-title-xs: 24px;
	--text-title-xs--line-height: 32px;
	--text-theme-xl: 20px;
	--text-theme-xl--line-height: 30px;
	--text-theme-sm: 14px;
	--text-theme-sm--line-height: 20px;
	--text-theme-xs: 12px;
	--text-theme-xs--line-height: 18px;

	--color-brand-25: #f2f7ff;
	--color-brand-50: #ecf3ff;
	--color-brand-100: #dde9ff;
	--color-brand-200: #c2d6ff;
	--color-brand-300: #9cb9ff;
	--color-brand-400: #7592ff;
	--color-brand-500: #465fff;
	--color-brand-600: #3641f5;
	--color-brand-700: #2a31d8;
	--color-brand-800: #252dae;
	--color-brand-900: #262e89;
	--color-brand-950: #161950;

	--color-gray-25: #fcfcfd;
	--color-gray-50: #f9fafb;
	--color-gray-100: #f2f4f7;
	--color-gray-200: #e4e7ec;
	--color-gray-300: #d0d5dd;
	--color-gray-400: #98a2b3;
	--color-gray-500: #667085;
	--color-gray-600: #475467;
	--color-gray-700: #344054;
	--color-gray-800: #1d2939;
	--color-gray-900: #101828;
	--color-gray-950: #0c111d;
	--color-gray-dark: #1a2231;

	--color-success-25: #f6fef9;
	--color-success-50: #ecfdf3;
	--color-success-100: #d1fadf;
	--color-success-500: #12b76a;
	--color-success-600: #039855;

	--color-error-25: #fffbfa;
	--color-error-50: #fef3f2;
	--color-error-100: #fee4e2;
	--color-error-500: #f04438;
	--color-error-600: #d92d20;

	--shadow-theme-xs: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
	--shadow-theme-sm: 0px 1px 3px 0px rgba(16, 24, 40, 0.1), 0px 1px 2px 0px rgba(16, 24, 40, 0.06);
	--shadow-theme-md:
		0px 4px 8px -2px rgba(16, 24, 40, 0.1), 0px 2px 4px -2px rgba(16, 24, 40, 0.06);
	--shadow-theme-lg:
		0px 12px 16px -4px rgba(16, 24, 40, 0.08), 0px 4px 6px -2px rgba(16, 24, 40, 0.03);
	--shadow-theme-xl:
		0px 20px 24px -4px rgba(16, 24, 40, 0.08), 0px 8px 8px -4px rgba(16, 24, 40, 0.03);
	--shadow-focus-ring: 0px 0px 0px 4px rgba(70, 95, 255, 0.12);
}

@utility menu-item {
	@apply relative flex items-center gap-3 rounded-lg px-3 py-2 text-theme-sm font-medium;
}

@utility menu-item-active {
	@apply bg-brand-50 text-brand-500 dark:bg-brand-500/12 dark:text-brand-400;
}

@utility menu-item-inactive {
	@apply text-gray-700 hover:bg-gray-100 hover:text-gray-700 dark:text-gray-300 dark:hover:bg-white/5 dark:hover:text-gray-300;
}

@utility menu-item-icon-active {
	@apply text-brand-500 dark:text-brand-400;
}

@utility menu-item-icon-inactive {
	@apply text-gray-500 group-hover:text-gray-700 dark:text-gray-400 dark:group-hover:text-gray-300;
}

@utility menu-item-arrow {
	@apply absolute top-1/2 right-2.5 -translate-y-1/2;
}

@utility menu-item-arrow-active {
	@apply rotate-180 stroke-brand-500 dark:stroke-brand-400;
}

@utility menu-item-arrow-inactive {
	@apply stroke-gray-500 group-hover:stroke-gray-700 dark:stroke-gray-400 dark:group-hover:stroke-gray-300;
}

@utility menu-dropdown-item {
	@apply relative flex items-center gap-3 rounded-lg px-3 py-2.5 text-theme-sm font-medium;
}

@utility menu-dropdown-item-active {
	@apply bg-brand-50 text-brand-500 dark:bg-brand-500/12 dark:text-brand-400;
}

@utility menu-dropdown-item-inactive {
	@apply text-gray-700 hover:bg-gray-100 dark:text-gray-300 dark:hover:bg-white/5;
}

@utility menu-dropdown-badge {
	@apply block rounded-full px-2.5 py-0.5 text-xs font-medium text-success-600 uppercase dark:text-success-500;
}

@utility menu-dropdown-badge-active {
	@apply bg-success-100 dark:bg-success-500/20;
}

@utility menu-dropdown-badge-inactive {
	@apply bg-success-50 group-hover:bg-success-100 dark:bg-success-500/15 dark:group-hover:bg-success-500/20;
}

@utility menu-dropdown-badge-pro {
	@apply block rounded-full px-2.5 py-0.5 text-xs font-medium text-brand-600 uppercase dark:text-brand-500;
}

@utility menu-dropdown-badge-pro-active {
	@apply bg-brand-100 dark:bg-brand-500/20;
}

@utility menu-dropdown-badge-pro-inactive {
	@apply bg-brand-50 group-hover:bg-brand-100 dark:bg-brand-500/15 dark:group-hover:bg-brand-500/20;
}

@utility no-scrollbar {
	&::-webkit-scrollbar {
		display: none;
	}
	-ms-overflow-style: none;
	scrollbar-width: none;
}

@utility custom-scrollbar {
	&::-webkit-scrollbar {
		@apply size-1.5;
	}
	&::-webkit-scrollbar-track {
		@apply rounded-full;
	}
	&::-webkit-scrollbar-thumb {
		@apply rounded-full bg-gray-200;
	}
}

.dark .custom-scrollbar::-webkit-scrollbar-thumb {
	background-color: #344054;
}

@layer base {
	*,
	::after,
	::before,
	::backdrop,
	::file-selector-button {
		border-color: var(--color-gray-200, currentColor);
	}
	button:not(:disabled),
	[role='button']:not(:disabled) {
		cursor: pointer;
	}
	body {
		@apply relative z-1 bg-gray-50 font-outfit font-normal dark:bg-gray-900;
		-webkit-font-smoothing: antialiased;
		-moz-osx-font-smoothing: grayscale;
		font-smooth: always;
	}
}

.sidebar:hover {
	width: 290px;
}
.sidebar:hover .logo {
	display: block;
}
.sidebar:hover .logo-icon {
	display: none;
}
.sidebar:hover .sidebar-header {
	justify-content: space-between;
}
.sidebar:hover .menu-group-title {
	display: block;
}
.sidebar:hover .menu-group-icon {
	display: none;
}
.sidebar:hover .menu-item-text {
	display: inline;
}
.sidebar:hover .menu-item-arrow {
	display: block;
}
.sidebar:hover .menu-dropdown {
	display: flex;
}

